# onefuncmanager

./: CMakeLists.txt  config.txt  onefuncmanager.cpp  resources.rc
